--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "flair": "./index.js"
     },
     "scripts": {
+        "flair": "node index.js",
         "package": "npm pack"
     },
     "dependencies": {
@@ -32,10 +33,8 @@
         "eslint": "^6.0.1",
         "fast-glob": "^3.0.4",
         "fs-extra": "^8.1.0",
-        "gulp": "^4.0.2",
         "html-minifier": "^4.0.0",
         "htmllint": "^0.8.0",
-        "http-server": "^0.11.1",
         "jasmine": "^3.4.0",
         "minimist": "^1.2.0",
         "open": "^6.4.0",
