--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "flairjs-cli",
     "title": "Flair.js CLI",
-    "description": "FlairJS CLI - The DevOps engine for FlairJS Ecosystem",
+    "description": "FlairJS CLI - The command line interface for FlairJS ecosystem",
     "copyright": "(c) 2017-2019 Vikas Burman",
-    "version": "0.55.62",
+    "version": "0.55.76",
     "author": "Vikas Burman <vikasburman@gmail.com>",
     "keywords": [
         "javascript",
@@ -30,6 +30,7 @@
         "clean-css": "^4.2.1",
         "copy-dir": "^1.1.0",
         "del": "^5.0.0",
+        "download-git-repo": "^2.0.0",
         "eslint": "^6.0.1",
         "fast-glob": "^3.0.4",
         "fs-extra": "^8.1.0",
