--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "Flair.js CLI",
     "description": "FlairJS CLI - The command line interface for FlairJS ecosystem",
     "copyright": "(c) 2017-2019 Vikas Burman",
-    "version": "0.58.0",
+    "version": "0.59.0",
     "author": "Vikas Burman <vikasburman@gmail.com>",
     "keywords": [
         "javascript",
@@ -17,7 +17,7 @@
     "homepage": "https://flairjs.com",
     "repository": {
         "type": "git",
-        "url": "https://github.com/vikasburman/flairjs.git"
+        "url": "https://github.com/vikasburman/flairjs-cli.git"
     },
     "bin": {
         "flair": "./index.js"
