--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "Flair.js CLI",
     "description": "FlairJS CLI - The command line interface for FlairJS ecosystem",
     "copyright": "(c) 2017-2019 Vikas Burman",
-    "version": "0.60.8",
+    "version": "0.61.0",
     "author": "Vikas Burman <vikasburman@gmail.com>",
     "keywords": [
         "javascript",
@@ -37,6 +37,7 @@
         "html-minifier": "^4.0.0",
         "htmllint": "^0.8.0",
         "jasmine": "^3.4.0",
+        "junk": "^3.1.0",
         "minimist": "^1.2.0",
         "open": "^6.4.0",
         "recursive-readdir-sync": "^1.0.6",
