--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "Flair.js CLI",
     "description": "FlairJS CLI - The command line interface for FlairJS ecosystem",
     "copyright": "(c) 2017-2020 Vikas Burman",
-    "version": "0.65.0",
+    "version": "0.67.0",
     "author": "Vikas Burman <vikasburman@gmail.com>",
     "keywords": [
         "javascript",
@@ -37,10 +37,10 @@
         "html-minifier": "^4.0.0",
         "htmllint": "^0.8.0",
         "jasmine": "^3.4.0",
-        "jsdoc-to-markdown": "^5.0.3",
         "junk": "^3.1.0",
         "minimist": "^1.2.0",
         "open": "^7.0.2",
+        "path-sort": "^0.1.0",
         "recursive-readdir-sync": "^1.0.6",
         "stylelint": "^13.2.0",
         "uglify-es": "^3.3.9"
