--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "Flair.js CLI",
     "description": "FlairJS CLI - The command line interface for FlairJS ecosystem",
     "copyright": "(c) 2017-2020 Vikas Burman",
-    "version": "0.71.0",
+    "version": "0.79.0",
     "author": "Vikas Burman <vikasburman@gmail.com>",
     "keywords": [
         "javascript",
@@ -27,6 +27,7 @@
         "package": "npm pack"
     },
     "dependencies": {
+        "chalk": "^3.0.0",
         "clean-css": "^4.2.1",
         "copy-dir": "^1.2.0",
         "del": "^5.1.0",
@@ -38,10 +39,13 @@
         "htmllint": "^0.8.0",
         "jasmine": "^3.4.0",
         "junk": "^3.1.0",
+        "matcher": "^2.1.0",
         "minimist": "^1.2.0",
+        "minisearch": "^2.1.4",
         "open": "^7.0.2",
         "path-sort": "^0.1.0",
         "recursive-readdir-sync": "^1.0.6",
+        "sanitize-html": "^1.22.1",
         "stylelint": "^13.2.0",
         "uglify-es": "^3.3.9"
     }
