--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "Flair.js CLI",
     "description": "FlairJS CLI - The command line interface for FlairJS ecosystem",
     "copyright": "(c) 2017-2020 Vikas Burman",
-    "version": "0.79.0",
+    "version": "0.80.0",
     "author": "Vikas Burman <vikasburman@gmail.com>",
     "keywords": [
         "javascript",
@@ -45,7 +45,7 @@
         "open": "^7.0.2",
         "path-sort": "^0.1.0",
         "recursive-readdir-sync": "^1.0.6",
-        "sanitize-html": "^1.22.1",
+        "showdown": "^1.9.1",
         "stylelint": "^13.2.0",
         "uglify-es": "^3.3.9"
     }
