--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "Flair.js CLI",
     "description": "FlairJS CLI - The command line interface for FlairJS ecosystem",
     "copyright": "(c) 2017-2020 Vikas Burman",
-    "version": "0.81.0",
+    "version": "0.84.0",
     "author": "Vikas Burman <vikasburman@gmail.com>",
     "keywords": [
         "javascript",
@@ -33,20 +33,23 @@
         "del": "^5.1.0",
         "download-git-repo": "^3.0.2",
         "eslint": "^6.3.0",
-        "fast-glob": "^3.0.4",
         "fs-extra": "^8.1.0",
         "html-minifier": "^4.0.0",
         "htmllint": "^0.8.0",
-        "jasmine": "^3.4.0",
+        "http-server": "^0.12.1",
+        "jasmine": "^3.5.0",
+        "jasmine-console-reporter": "^3.1.0",
+        "jasmine-json-test-reporter": "^1.0.0-beta",
         "junk": "^3.1.0",
         "matcher": "^2.1.0",
         "minimist": "^1.2.0",
         "minisearch": "^2.2.1",
         "open": "^7.0.2",
         "path-sort": "^0.1.0",
+        "protractor-jasmine2-html-reporter": "^0.0.7",
         "recursive-readdir-sync": "^1.0.6",
         "showdown": "^1.9.1",
-        "stylelint": "^13.2.0",
+        "stylelint": "^13.3.1",
         "uglify-es": "^3.3.9"
     }
 }
